--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" href="/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App | Shayan Talebian</title>
 
@@ -27,9 +28,46 @@
 
       <section class="input-part">
         <p class="info-text">Please enter a valid city name</p>
-        <input type="text" placeholder="Enter city name" spellcheck="false" />
+        <input
+          type="text"
+          placeholder="Enter city name"
+          spellcheck="false"
+          required
+        />
         <div class="separator"></div>
         <button>Get Device Location</button>
+      </section>
+
+      <section class="weather-part">
+        <!-- <img src="./assets/Weather Icons/cloud.svg" alt="Weather Icon" /> -->
+        <div class="temp">
+          <span class="numb">13</span>
+          <span class="deg">°</span>
+        </div>
+        <div class="weather">Broken Clouds</div>
+        <div class="location">
+          <i class="bx bx-map"></i>
+          <span>Kathmandu, Nepal</span>
+        </div>
+        <div class="bottom-details">
+          <div class="column feels">
+            <i class="bx bxs-thermometer"></i>
+            <div class="details">
+              <div class="temp">
+                <span class="numb">13</span>
+                <span class="deg">°</span>
+              </div>
+              <p>Feels Like</p>
+            </div>
+          </div>
+        </div>
+        <div class="column humidity">
+          <i class="bx bxs-droplet-half"></i>
+          <div class="details">
+            <span class="numb">85%</span>
+            <p>Humadity</p>
+          </div>
+        </div>
       </section>
     </div>
     <script src="script.js" type="text/javascript"></script>
