--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       </section>
 
       <section class="weather-part">
-        <!-- <img src="./assets/Weather Icons/cloud.svg" alt="Weather Icon" /> -->
+        <img src="./assets/Weather Icons/cloud.svg" alt="Weather Icon" />
         <div class="temp">
           <span class="numb">13</span>
-          <span class="deg">°</span>
+          <span class="deg">°C</span>
         </div>
         <div class="weather">Broken Clouds</div>
         <div class="location">
@@ -54,18 +54,18 @@
             <i class="bx bxs-thermometer"></i>
             <div class="details">
               <div class="temp">
-                <span class="numb">13</span>
-                <span class="deg">°</span>
+                <span class="numb-2">17</span>
+                <span class="deg">°C</span>
               </div>
               <p>Feels Like</p>
             </div>
           </div>
-        </div>
-        <div class="column humidity">
-          <i class="bx bxs-droplet-half"></i>
-          <div class="details">
-            <span class="numb">85%</span>
-            <p>Humadity</p>
+          <div class="column humidity">
+            <i class="bx bxs-droplet-half"></i>
+            <div class="details">
+              <span>85%</span>
+              <p>Humadity</p>
+            </div>
           </div>
         </div>
       </section>
