Finish the project

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
       </section>
 
       <section class="weather-part">
-        <img src="./assets/Weather Icons/cloud.svg" alt="Weather Icon" />
+        <img src="#" alt="Weather Icon" />
         <div class="temp">
-          <span class="numb">13</span>
+          <span class="numb">_</span>
           <span class="deg">°C</span>
         </div>
-        <div class="weather">Broken Clouds</div>
+        <div class="weather">_ _</div>
         <div class="location">
           <i class="bx bx-map"></i>
-          <span>Kathmandu, Nepal</span>
+          <span>_, _</span>
         </div>
         <div class="bottom-details">
           <div class="column feels">
             <i class="bx bxs-thermometer"></i>
             <div class="details">
               <div class="temp">
-                <span class="numb-2">17</span>
+                <span class="numb-2">_</span>
                 <span class="deg">°C</span>
               </div>
               <p>Feels Like</p>
@@ -63,7 +63,7 @@
           <div class="column humidity">
             <i class="bx bxs-droplet-half"></i>
             <div class="details">
-              <span>85%</span>
+              <span>_</span>
               <p>Humadity</p>
             </div>
           </div>
